compiler/tests/en/errors/variant_nested.salam
// EXPECT: E001
func main:
    x := 1 as Variant<i32, Variant<str, bool>>
    println x
end
